--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-table": "^8.19.3",
     "class-variance-authority": "^0.7.0",
@@ -19,6 +21,7 @@
     "lucide-react": "^0.411.0",
     "next": "14.2.15",
     "next-themes": "^0.3.0",
+    "nextjs-toploader": "^3.7.15",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.4.0",
