--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@auth/core": "^0.37.2",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
@@ -21,6 +22,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.411.0",
     "next": "14.2.15",
+    "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.3.0",
     "nextjs-toploader": "^3.7.15",
     "react": "^18",
