--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-query": "^5.62.0",
     "@tanstack/react-table": "^8.19.3",
     "boxicons": "^2.1.4",
     "class-variance-authority": "^0.7.0",
@@ -40,6 +41,7 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
+    "@tanstack/eslint-plugin-query": "^5.61.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
