--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
+    "react-spinners": "^0.15.0",
     "sonner": "^1.7.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.4.0",
