feat: Adicionando componente de filtro em datatable.

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@tanstack/react-query": "^5.62.0",
     "@tanstack/react-table": "^8.19.3",
@@ -30,12 +30,14 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.411.0",
     "next": "14.2.18",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.3.0",
     "nextjs-toploader": "^3.7.15",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
     "react-spinners": "^0.15.0",
