--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "framer-motion": "^12.3.0",
     "lucide-react": "^0.468.0",
     "next": "15.1.0",
     "next-auth": "^5.0.0-beta.25",
