--- a/package.json
+++ b/package.json
@@ -30,14 +30,15 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@react-input/mask": "^2.0.4",
-    "@tanstack/react-query": "^5.66.0",
-    "@tanstack/react-table": "^8.20.6",
+    "@tanstack/react-query": "^5.68.0",
+    "@tanstack/react-table": "^8.21.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "^1.0.4",
+    "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.7",
-    "framer-motion": "^12.4.1",
+    "drizzle-orm": "^0.40.0",
+    "framer-motion": "^12.5.0",
     "lucide-react": "^0.468.0",
     "next": "15.1.0",
     "next-auth": "5.0.0-beta.25",
@@ -52,16 +53,17 @@
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.1"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
-    "@tanstack/eslint-plugin-query": "^5.66.0",
-    "@types/node": "^20.17.17",
+    "@tanstack/eslint-plugin-query": "^5.68.0",
+    "@types/node": "^20.17.24",
     "@types/pg": "^8.11.11",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "drizzle-kit": "^0.30.5",
     "eslint": "^8.57.1",
     "eslint-config-next": "14.2.5",
     "eslint-config-prettier": "^9.1.0",
@@ -69,8 +71,8 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-tailwindcss": "^3.18.0",
     "husky": "^9.1.7",
-    "postcss": "^8.5.1",
-    "prettier": "^3.5.0",
+    "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.19.3",
