--- a/package.json
+++ b/package.json
@@ -29,23 +29,22 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@react-input/mask": "^2.0.4",
-    "@tanstack/react-query": "^5.68.0",
+    "@tanstack/react-query": "^5.69.0",
     "@tanstack/react-table": "^8.21.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
-    "dotenv": "^16.4.7",
-    "drizzle-orm": "^0.40.0",
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.468.0",
     "next": "15.1.0",
     "next-auth": "5.0.0-beta.25",
+    "next-client-cookies": "^2.0.1",
     "next-themes": "^0.3.0",
     "nextjs-toploader": "^3.7.15",
-    "pg": "^8.14.0",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
@@ -64,7 +63,6 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "drizzle-kit": "^0.30.5",
     "eslint": "^8.57.1",
     "eslint-config-next": "14.2.5",
     "eslint-config-prettier": "^9.1.0",
